# sofiavldd2005.github.io

./: Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: app.rs  home.rs  main.rs  resume.rs
src/pages/: home.rs  iss.rs  mod.rs  not_found.rs  projects.rs  resume.rs
